--- a/Frontend/src/StyleCss/StartPage.css
+++ b/Frontend/src/StyleCss/StartPage.css
@@ -138,6 +138,18 @@
     text-decoration: underline;
   }
   
+  .fade-in {
+  opacity: 0;
+  animation: fadeIn 0.8s ease-in-out forwards;
+  animation-delay: 0.3s;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+  
 
 /* Smartphones (bis 600px) */
 @media (max-width: 600px) {
