--- a/Frontend/src/StyleCss/AdminStatistik.css
+++ b/Frontend/src/StyleCss/AdminStatistik.css
@@ -1,6 +1,6 @@
 .admin-statistik {
   width: 100%;
-  padding: 2rem;
+  padding-top: 2rem;
   background: #fff;
   border-radius: 12px;
   font-family: FrankieNeudorff, Arial, sans-serif;
