--- a/Frontend/src/StyleCss/AdminBestellungen.css
+++ b/Frontend/src/StyleCss/AdminBestellungen.css
@@ -1,6 +1,6 @@
 .admin-bestellungen {
   width: 100%;
-  padding: 2rem;
+  padding-top: 2rem;
   background: #fff;
   border-radius: 12px;
   font-family: FrankieNeudorff, Arial, sans-serif;
