--- a/Frontend/src/StyleCss/AdminProdukte.css
+++ b/Frontend/src/StyleCss/AdminProdukte.css
@@ -1,6 +1,6 @@
 .admin-produkte {
   width: 75%;
-  padding: 2rem;
+  padding-top: 2rem;
   background-color: #ffffff;
   border-radius: 12px;
   font-family: 'FrankieNeudorff', Arial, sans-serif;
